# dagster-warehouse

./: .env.example  .envrc  .gitignore  README.md  pyproject.toml  requirements.txt
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: generate_schema_name.sql
dbt_project/models/: sources.yml
dbt_project/models/bronze/: base_inventory.sql  base_invoice_line_cost.sql  base_pos_ticket.sql  base_pos_ticketline.sql  base_pos_ticketline_tax_log.sql  schema.yml  tenant_stores.sql
dbt_project/models/gold/: ra_hourly_sales.sql  schema.yml
dbt_project/models/silver/: customer_first_tx.sql  customer_first_tx_timestamp.sql  daily_customer_cnt.sql  invoice_fact.sql  invoice_line.sql  schema.yml  ticket_sales.sql  ticketline_sales.sql  ticketline_tax_totals.sql  ticketline_taxes.sql
warehouse_orchestrator/: compiler.py  definitions.py  partitions.py  project.py
warehouse_orchestrator/assets/: __init__.py  bronze.py  gold.py  silver.py
warehouse_orchestrator/io_managers/: __init__.py  snowflake.py
warehouse_orchestrator/jobs/: __init__.py  warehouse.py
warehouse_orchestrator/resources/: __init__.py  snowflake.py
warehouse_orchestrator/schemas/: bronze.py  gold.py  silver.py
